--- a/box-model.html
+++ b/box-model.html
@@ -12,12 +12,11 @@
             margin: 30px;
             font-family: sans-serif;
             font-size: 20px;
-            
         }
         .question{
             text-decoration:underline;
             text-transform: uppercase;
-            color: rgb(228, 16, 189);
+            color: green;
 
         }
         .title{
